--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,11 @@
     --accent-color: #2196F3;
     --primary-white-color: #ffffff; 
     --new-accept: #000000;
-    --accept-footer:rgba(255, 255, 255, 0.6)
+    --color-button-primary:#188CE8;
+    --color-bg: #2F303A;
+    --color-bg-filter: #F5F4FA;
+    --accept-footer:rgba(255, 255, 255, 0.6);
+
 
 }
 
@@ -19,6 +23,8 @@ body{
     color: var(--primary-text-color);
     background-color: var(--primary-white-color);
     font-family: Roboto, sans-serif;
+    font-size: 14px;
+    letter-spacing: 00.03em;
 }
 
 /* Стилизация логотипа */
@@ -29,7 +35,6 @@ body{
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
-    letter-spacing: 0.03em;
     text-decoration: none;
 }
 
@@ -44,7 +49,6 @@ body{
 .site-nav .link {
     color: var(--title-text-color);
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
@@ -58,38 +62,37 @@ body{
     color: var(--accent-color);
 }
 
-/* site-nav-contacts */
+/* contact-list */
 
-.site-nav-contacts .mail.link
-.site-nav-contacts .tel.link{
+.contact.link{
+    color: var(--primary-text-color);
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+    font-style: normal;
 }
-.site-nav-contacts .mail.link:hover
-.site-nav-contacts .mail.link:focus{
+
+.contact.link:hover{
     color: var(--accent-color);
 }
 
-.site-nav-contacts .tel.link:hover
-.site-nav-contacts .tel.link:focus{
-    color: var(--accent-color);
-}
 
 /* Пропозиції */
-.propositions-title{
-    color: var(--primary-white-color);
-    background-color: #2F303A;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+
+.propositions{
+    background-color: var(--color-bg);
     text-align: center;
     letter-spacing: 0.06em;
 }
-
-/* Button */
+.propositions-title{
+    color: var(--primary-white-color);
+    font-weight: 900;
+    font-size: inherit;
+    font-size: 44px;
+    line-height: 1.36;
+    text-transform: uppercase;
+}
 
 .button.primary{
     color: var(--primary-white-color);
@@ -97,12 +100,13 @@ body{
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-    text-align: center;
-    letter-spacing: 0.06em;
+    align-items: center;
+    cursor: pointer;
+    font-family: inherit;
 }
 .button.primary:hover,
 .button.primary:focus{
-    color: #188CE8; 
+    color: var(--color-button-primary); 
 }
 
 /* Особенности */
@@ -110,19 +114,15 @@ body{
 .features-title{
     color: var(--title-text-color);
     font-weight: 700;
-    font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 ul{
     list-style: none;
 }
 
 .section-text{
-    font-weight: 400;
-    font-size: 14px;
     line-height: 1.7;
-    letter-spacing: 0.03em;
 }
 
 /* Чим ми займаємося+Члени команди */
@@ -132,7 +132,7 @@ ul{
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-    letter-spacing: 0.03em;
+
 }
 /* Члени команди */
 
@@ -141,33 +141,82 @@ ul{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
+
 }
 
 .job-title{
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
 }
 
 /* Footer */
 
+.footer{
+    background-color: var(--color-bg);
+}
+
+
+.logo-footer{
+    color: var(--primary-white-color);
+    text-decoration: none;
+}
+
+
+.contacts{
+    line-height: 1.7;
+    font-style: normal;
+}
 .address{
     color: var(--primary-white-color);
-    background-color: blue;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
+    text-decoration: none;
+    cursor: none;
+
 }
 .mail,
 .tel{
     color: var(--accept-footer);
-    background-color: blue;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
+    text-decoration: none;
+    cursor: none;
+}
+
+/* Стилі для Портфоліо */
+
+/* Наші проекти */
+/* Button */
+
+.filter{
+    color: var(--title-text-color);
+    background-color: var(--color-bg-filter);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center; 
+    font-family: inherit;
+    cursor: pointer;
+}
+
+.filter:hover,
+.filter:focus{
+    color: var(--primary-white-color);
+    background-color: var(--accent-color);
+}
+
+/* Наші проекти */
+
+ul{
+    list-style: none;
+}
+
+.title{
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2.0;
+    letter-spacing: 0.06em;
+}
+
+.text{
+    font-size: 16px;
+    line-height: 1.88; 
 }
 
