--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body{
     background-color: var(--primary-white-color);
     font-family: Roboto, sans-serif;
     font-size: 14px;
-    letter-spacing: 00.03em;
+    letter-spacing: 0.03em;
 }
 
 /* Стилизация логотипа */
@@ -91,6 +91,7 @@ body{
     font-size: inherit;
     font-size: 44px;
     line-height: 1.36;
+    letter-spacing: 0.06em;
     text-transform: uppercase;
 }
 
@@ -100,6 +101,7 @@ body{
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
+    letter-spacing: 0.06em;
     align-items: center;
     cursor: pointer;
     font-family: inherit;
@@ -115,6 +117,7 @@ body{
     color: var(--title-text-color);
     font-weight: 700;
     line-height: 1.14;
+    font-size: inherit;
     text-transform: uppercase;
 }
 ul{
@@ -123,6 +126,7 @@ ul{
 
 .section-text{
     line-height: 1.7;
+
 }
 
 /* Чим ми займаємося+Члени команди */
